Alterações MQTT do Bruno